--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Schprxy</title>
+    <title>My Proxy Website</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'elf' 'unsafe-inline'; style-src 'elf' 'unsafe-inline';">
   </head>
   <body>
     <h1>My Proxy Website</h1>
