--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Proxy Website</title>
+    <title>schprxy</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'elf' 'unsafe-inline'; style-src 'elf' 'unsafe-inline';">
   </head>
